Fix sidebar transparency and footer overlap

--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -22,9 +22,9 @@
   margin-top: 3em;
 
   -webkit-animation: intro 0.3s both;
-          animation: intro 0.3s both;
+  animation: intro 0.3s both;
   -webkit-animation-delay: 0.45s;
-          animation-delay: 0.45s;
+  animation-delay: 0.45s;
   border-top: 1px solid var(--global-dark-border-color);
 
   footer {
@@ -34,6 +34,11 @@
     margin-top: 1em;
     max-width: 100%;
     padding: 0 1em 1em;
+
+    @include breakpoint($large) {
+      max-width: $large;
+      @include pre(2 of 12); // Shift content to the right to clear fixed sidebar
+    }
 
     @include breakpoint($x-large) {
       max-width: $x-large;
@@ -78,7 +83,7 @@
     text-transform: uppercase;
   }
 
-  li + li:before {
+  li+li:before {
     content: "";
     padding-right: 5px;
   }
